--- a/chapter_4.qmd
+++ b/chapter_4.qmd
@@ -61,3 +61,5 @@ The second phase will involve using the data from archives and using models to p
 With an effective monitoring system, an action plan and a taskforce supplmemted by third parties, illegal mining can see as an unproductive venture. While serving as a deterrence, it aids the Government in achieving more revenue as illegal miners will turn legal miners and less money is spent on rehabilitating water bodies and forests. Implementation of this will also aid the government achieve it’s goal of sustainable and responsible mining. It also ties in with government’s aim of protecting water bodies and agricultural lands. It even goes as far as achieving the Sustainable Development Goals, specifically goals 2, 6, 14 and 15. (Essah, 2022) Thus, reduced soil degradation of agricultural lands(SDG 2), water pollution (SDG, 6 & 14) and protect the wildlide (SDG, 15).
 
 ## Reflections
+what is the effect
+
