--- a/chapter_1.qmd
+++ b/chapter_1.qmd
@@ -4,19 +4,13 @@ title: "Introduction to Remote Sensing & Satellite Data"
 
 ## Introduction
 
-This is the first week of remote sensing module. I will first like to state a brief overview of what it entails.
+I currently understand remote sensing as the process of gathering information about the Earth's surface without direct contact. This is done through passive sensors (like satellite imagery) and active sensors (like LiDAR and RADAR). Passive sensors detect reflected sunlight, while active ones send out pulses (e.g., lasers) and measure what bounces back. Both rely on electromagnetic waves. Remote sensing is often combined with GIS to analyse landscapes, land cover, urban areas, and environmental change. The combination of these techniques, and the data they produce, enables environmental monitoring, resource management, and biodiversity conservation at different spatial scales. Figure 1 summarizes it all.
 
-![Overview of Remote Sensing](week_1/download2.PNG)
+![Fig.1 Overview of Remote Sensing](week_1/download2.PNG)
 
-Remote sensing for me is a method gathered about the Earth's surface without direct contact through passive (e.g., satellite imagery) and active (e.g., LIDAR, RADAR) sensors. It can be integrated with GIS to analyse landscapes, land cover, demographics and others. Active sensors compute elevation using laser pulses, while passive sensors capture reflected sunlight, they all are electromagnetic waves. Combining these techniques and noting the interaction in the earth’s atmosphere, enables precise environmental monitoring, resource management, and biodiversity conservation at multiple spatial scales. Satellites I want to delve deeper into the suspend equipment above the atmosphere - Satellites. I find it interesting because when I think of remote sensing satellites come to mind. These satellites are sent up to the earth’s orbit. There are types of satellites. These are
+What caught my attention this week was the role of satellites—these suspended systems orbiting Earth. Remote sensing and satellites go hand-in-hand, but I hadn’t really considered the different types before. There are:
 
--   **Geostationary Satellites** - These are stationary satellites which are normally used for weather monitoring, telecommunications and environmental observations.
--   **Low Earth Orbit (LEO) Satellites**: These satellites are used for high-resolution imaging has it is normally placed 160 and 2,000 km above Earth’s surface.
--   **Sun-Synchronous (Polar) Satellites** – Just like the same, these satellites orbit the earth in a polar direction and in sync with the sun. This is most used for scientific and environmental monitoring.
-
-Among these types of satellites, I want to focus on the sun-synchronous types mainly Sentinel and Landsat satellite. Two main satellites stand out in remote sensing.
-
-Types of sensors on both types
+Geostationary satellites – stationary, mainly used for weather, telecoms, and large-scale monitoring. Low Earth Orbit (LEO) satellites – used for high-resolution imaging, orbiting 160–2,000 km above Earth. Sun-synchronous (polar) satellites – orbit Earth in sync with the sun, useful for consistent scientific observations. The sun-synchronous satellites, especially Sentinel-2 and Landsat-8, stood out to me because they’re both widely used in environmental monitoring. Here's a brief comparison:
 
 | Feature      | Landsat-8 | Sentinel-2 |
 |--------------|-----------|------------|
@@ -24,42 +18,47 @@ Types of sensors on both types
 | Revisit Time | 16days    | 5days      |
 | Bands        | 11 bands  | 13 bands   |
 
-Let’s look deeper into the bands Basically, bands are like different filters with specific wavelengths that satellites use to capture images of the earth surface. Thus, each band serves a specific purpose and for what it is best suited for. The USGS comparison graph (USGS, n.d.) illustrates how different bands on Landsat and Sentinel-2 cover different portions of the electromagnetic spectrum.
+A term that I think will keep coming up is bands. Bands are like filters for specific wavelengths of light. Each band captures data differently, and depending on which are available, a satellite may be better suited for certain tasks. For instance, near-infrared is good for vegetation monitoring, while shortwave infrared helps with detecting soil moisture. Looking at the image here (figure 2), 
 
-Looking at the image here
+![Fig. 2 Comparison of Landsat 7 and 8 bands with Sentinel-2](week_1/Comparison_of%20Landsat_7_and_8_bands_with_Sentinel-2.png) 
 
-![Comparison of Landsat 7 and 8 bands with Sentinel-2](week_1/Comparison%20of%20Landsat%207%20and%208%20bands%20with%20Sentinel-2.png)
+I noticed that while both satellites share some bands, they also have unique ones. For example, Landsat-8 includes a Thermal Infrared Sensor (TIRS) which Sentinel-2 lacks—this means Landsat can provide thermal data like land surface temperature (LST), which is valuable in urban heat studies.
 
-In the graph, the x axis presents the wavelength of the electromagnetic spectrum and y which shows the atmospheric transmission (%) indicates the amount of light passing through the atmosphere. The bands are important for me because I believe they tell a lot about what the data can be best used for and help in narrowing down which satellite to use in a study. Here is a summary of the bands and that use case.
+Understanding bands will be key in selecting the right satellite for different types of studies. It’s already helping me see how technical features link to practical applications.
 
 ## Application
 
-For this section, I want to use what I learnt in summary to understand which satellite to use for land cover classification. A study by Ahady, A.B., and Kaplan, G. shows the comparison between Landsat-8 and Sentinel-2 data over the city of Kabul. This was a comparison over accuracy of land cover considering water, cropland, urban, and bare land.
+For this section, I wanted to use what I learned in the summary to figure out which satellite is more suitable for land cover classification. A study by Ahady, A.B. and Kaplan, G. compared Landsat-8 and Sentinel-2 data over the city of Kabul, focusing on classification accuracy across four land cover types: water, cropland, urban, and bare land.
 
 Key insights
 
-The Landsat-8 had an overall classification accuracy 85.04%. while the Sentinel-2 had a classification accuracy of 94.26%. Now lets look at these images ![Landsat-8’s classification](week_1/Landsat-8’s%20classification.png)
+- Landsat-8 had an overall classification accuracy 85.04%.
+- Sentinel-2 had a classification accuracy of 94.26%. 
 
-![Sentinel-2 classification](learning_dairy/week_1/Sentinel-2%20classification.png) From the images we can see that Figure 2 has finer detail as compared to figure one. This may be due to several reasons, but I feel it’s mainly due to spatial resolution. The sentinel has a higher resolution, so it expected to have an influence on its accuracy, as it as able to define features more clearly. Another factor accounting for higher accuracy maybe the number of visits. The sentinel has shorter revisit period, thus more volume of data can be gathered in a month as compared to the Landsat data. Thus, a higher chance of getting an image with little interference hence a high accuracy. Lastly, I want to check the bands. This also has major effect on accuracy. As stated earlier, spectral bands are essential filters that satellites use to analyze Earth's surface. Ahady & Kaplan’s classification relied on surface reflectance bands, which directly tie back to the band functions I described in Week 1. The near-infrared (NIR, B5 for Landsat and B8 for Sentinel-2) played a key role in differentiating urban and vegetative areas, further demonstrating the importance of understanding band selection in remote sensing applications.
+Let’s look at the outputs:
 
-This does not go to say we can poke holes in the results of the study. One can be model used in analysing the data. These pictures are cut clips of the same location and I’m not sure both satellites can capture the same location within a single tile. So, merging might have been done hence reducing the robustness of the result. This doesn’t go to say Landsat is better at land cover than sentinel satellite.
+![Fig. 3 Landsat-8’s imagery](week_1/Landsat-8_classification.png)
+
+![Fig. 4 Sentinel-2 imagery](week_1/Sentinel-2_classification.png)
+
+
+From the images, it’s clear that Sentinel-2 (Figure 4) shows finer detail compared to Landsat-8 (Figure 3). One major reason could be the spatial resolution—Sentinel-2 has higher resolution, which allows it to define features more clearly, especially in urban and mixed-use areas. That likely contributes to its higher classification accuracy.
+
+Another factor could be the revisit time. Sentinel-2 revisits every 5 days, while Landsat-8 takes 16 days. That means more cloud-free images are available from Sentinel-2 within the same time frame, which improves the chance of capturing clearer, more usable data.
+
+Lastly, the spectral bands might also influence classification. As I noted earlier, bands are like filters that let satellites “see” certain land characteristics. The study used surface reflectance bands, and the near-infrared (NIR) band was especially important. For Landsat-8, that’s Band 5, and for Sentinel-2, it’s Band 8. NIR is key for separating vegetation from built-up areas, which makes it critical in land classification.
+
+That said, I don’t think the study’s results mean Sentinel-2 is always better. One limitation might be the classification model used. Also, I wonder whether both satellite images fully covered the same tile or whether mosaicking was done. That could affect consistency and reduce the robustness of the comparison.
+
+So, while Sentinel-2 performed better in this study, context matters. Landsat might still be more suitable in other scenarios—especially where thermal data (like LST) or historical depth is needed.
 
 ## Reflection
 
-It is the first week of the term and has been a slow start. Still wondering what I can make out the course and maybe in week 10 will probably have one. I now understand the bases of the remote sensing,
+It’s the first week of the term, and to be honest, it’s been a bit of a slow start. I’m still figuring out what I will take away from this course. Probable by Week 10 I will have a clearer answer. For now, I’ve got a much better grasp of the basics of remote sensing: types of sensors, surface reflectance, atmospheric interference, and how satellites and bands come into play. It’s a lot to take in, but I’m starting to connect the dots.
 
-what are they?
+Something I’ve been thinking about is whether we can combine Landsat and Sentinel data to make better sense of climate change. Landsat has the long archive, and Sentinel gives more frequent and detailed images. Putting them together could help us spot trends over time—like, are we really seeing lasting climate change, or are we just in a long seasonal cycle that feels different but has happened before? This is a big question, especially in Europe where climate change is felt. Like snow not falling in London like how it did in previous years. Having both satellites working together might help reveal whether we're dealing with natural variation or a real shift.
 
-excluding the analysis part. From the summary and application part, I am wondering if data from both Landsat and Sentinel can use concurrently in a study. Probable if the data was merged, we will have the wealth of historical data from the landsat series and the accuracy of the sentinel data. This can be used in understanding trends of natural disasters or the climate change...how
 
-. These two do not
+Remote sensing, I believe will have more impact in developing countries. Ghana as a developing country could benefit from as it can monitor the land use, deforestation, and pollution. This could help in planning and decision-making. For instance, the Sentinel-5P satellite can monitor pollution levels in the atmosphere. This could be useful in Accra, where pollution levels are high.
 
--   context: how do you think this could used - landcover, pollution montiroing (S5P) and why might that be useful
-
--   future exploration
-
--   did you like SNAP, what were limtations of it and
-
-Intro to papers
-
-Criticality of papers
+Also, about SNAP—yeah, that practical was rough. Clunky interface, laggy tools, not fun. But I did get a feel for the kind of hands-on work remote sensing really involves.
