--- a/MODIS.qmd
+++ b/MODIS.qmd
@@ -2,8 +2,6 @@
 title: "Xaringan"
 ---
 
-This is a link for a xaringan presentation: 
-[xaringan](https://slides.yihui.org/xaringan/#1)
+This is a link for a xaringan presentation: [MODIS]https://kobbyshalom.github.io/Modis_slides/#1)
 
 The presentations covers an overview, applications and some reflections on the MODIS sensor
-
