--- a/chapter_4.qmd
+++ b/chapter_4.qmd
@@ -12,7 +12,7 @@ The system in Ghana is a unique system where policies are mainly created by the 
 
 For this week, I want to look at the illegal mining commonly known as Galamsey. Ghana currently battling illegal mining being a mineral rich country. These minerals especially gold contributes a major part of the nation’s GDP. This reflects in Ghana being the 6th producer of Gold in 2024. The issue comes at a time where the prices of gold are at an all-time high. (Savage et al., 2025) This is shown in the graph below.
 
-![Statistics on Gold production](week_4/Ghana's%20gold%20production.png)
+![Fig. 1 Statistics on Gold production](week_4/Ghana's_gold_production.png)
 
 Even though there are policies regulating mining activities, the country faces the impacts of galamsey. This is evident in the Ghana water company
 
@@ -30,36 +30,36 @@ The government established an anti-galamsey task force code named Operation Halt
 
 ## Application
 
-The current method used by the taskforce to identify and deploy people to the sites is unknown, but I believe earth observation (EO) can be used to improve the effectiveness of the taskforce. There are many sensors which can be used for this task, but I will refer to literature to recommend one or two.
+While the exact method the anti-galamsey taskforce uses to identify illegal mining sites is unclear, Earth Observation (EO) could support smarter, evidence-based deployment. Drawing from relevant literature, I propose a data-driven approach using remote sensing tools.
 
-### Paper 1
+### Paper 1: Water Quality Monitoring
 
-In a paper by Niroumand-Jadidi, M., Bovolo, F. and Bruzzone, L. explored the use of hyperspectral images from PRISMA sensor on retrieving water quality parameters. This was done in comparison with data collected from the sentinel -2. Just as in first chapter, I spoke about bands having an impact on the accuracy of the sensor, the comparison of bands shows PRISMA having a wide range as compared to Sentinel-2.
+Niroumand-Jadidi, et al. (2020) assessed PRISMA hyperspectral imagery for retrieving water quality parameters, comparing it with Sentinel-2.  PRISMA’s more spectral bands as compare to Sentinel-2. This is shown in figure 2. This was used with the WASI (Water Colour Simulator) model to detect suspended materials. Since illegal mining is closely linked with river pollution, this makes PRISMA a powerful tool for identifying active mining areas.(Kazapoe et al., 2023).  
 
-![PRISMA and Sentinel-2 Band Comparison](week_4/Bands%20in%20PRISMA%20and%20Sentinel-2.png)
+![Fig. 2 PRISMA and Sentinel-2 Band Comparison](week_4/Bands_in_PRISMA_and_Sentinel-2.png)
 
-In the paper, the analysis of the images was based on the inversion of a radiative transfer model, WASI. From the results, it can be concluded that the PRISMA sensor is good for monitoring water quality. (Niroumand-Jadidi et al., 2020).
+Water contamination often reflects mining activity—thus tracking turbidity, sediment, and color changes can help pinpoint illegal operations. Ghana’s water bodies are regularly affected, and the PRISMA sensor’s hyperspectral capacity makes it suitable for detecting subtle environmental changes missed by standard multispectral sensors.
 
-Water quality was considered to identify mining sites because there is a high correlation between contamination of waterbodies and illegal mining activities. (Kazapoe et al., 2023).
 
-![Illegal mining near a river](week_4/galamsey%20in%20water%20bodies.jpg)
+![Fig. 3 Illegal mining near a river](week_4/galamsey_in_water_bodies.jpg)
 
-### Paper 2
+### Paper 2 Wider Mining Impacts
 
-In the second paper by (Ngom et al., 2023) they presented remote sensing techniques monitor the impact of artisanal mining. They looked at detection of sites, soil degradation, deforestation and water turbidity analysis. Not to summarize the paper, I will go into what will help with the policy. This papers, gives a idea of the scope of which EO data can be used or incorporated in and gives a workflow which I will adopt to help the policy on mining in Ghana.
+Ngom et al. (2023) explored EO methods to monitor artisanal mining impacts like soil degradation, deforestation, and turbidity. Their framework illustrates how different indicators(e.g. water properties) can support policy enforcement through remote sensing. I will adopt their workflow to help the mining policy in Ghana.
 
-### Workflow
+### Proposed Workflow
 
-The general approach is creating a dashboard to direct the deployment of a taskforce to inspect places which might have illegal mining going on. The dashboard will be based on a earth observation data, particularly from Sentinel-2 and PRISMA. The sentinel data will downloaded from the Copernicus server and the PRISMA data will be gathered from aerial shots of suspected areas. The PRISMA will be the main data. This will be stored.
-
+Building on both papers, I propose a monitoring dashboard using data from Sentinel-2 (temporal coverage) and PRISMA (detailed sensing). EO data would be processed to flag suspicious changes in land use or water quality. These would be cross-referenced by partners like the Ghana Water Company and Forestry Commission, providing ground validation.
 ![Data workflow](week_4/workflow_1.png)
-
-The second phase will involve using the data from archives and using models to process the data and highlight areas of interest. This will forwarded to the partners who in this case can be Ghana Water Company, the Ghana Forestry commission and local district assemblies to check to confirm. These are key partners because the effects of illegal mining affect their works. So they can compare with their database to see if there is any correlation with incidents or irregularities. With their input which can be considered as a validation of detections, the dashboard can be created. This will then direct the taskforce on where to go. It will prorisite the locations according to the level impact for an effective. It should be made public so everyone knows the mining activities is tracked and actively tackle with transperancy.
 
 ![Dashboard workflow](week_4/workflow_2.png)
 
-With an effective monitoring system, an action plan and a taskforce supplmemted by third parties, illegal mining can see as an unproductive venture. While serving as a deterrence, it aids the Government in achieving more revenue as illegal miners will turn legal miners and less money is spent on rehabilitating water bodies and forests. Implementation of this will also aid the government achieve it’s goal of sustainable and responsible mining. It also ties in with government’s aim of protecting water bodies and agricultural lands. It even goes as far as achieving the Sustainable Development Goals, specifically goals 2, 6, 14 and 15. (Essah, 2022) Thus, reduced soil degradation of agricultural lands(SDG 2), water pollution (SDG, 6 & 14) and protect the wildlide (SDG, 15).
+A refined dashboard would prioritize locations by impact, helping the taskforce deploy more strategically. This transparency could deter offenders, support early intervention, and reduce costs associated with water treatment and ecosystem restoration.
+
+Ultimately, this system aligns with Ghana’s sustainable mining goals, protects agricultural land and water bodies, and supports SDGs 2, 6, 14, and 15.
 
 ## Reflections
+
 what is the effect
 
+References
