--- a/chapter_5.qmd
+++ b/chapter_5.qmd
@@ -1,3 +1,35 @@
 ---
 title: "Google Earth Engine"
 ---
+
+## Summary
+
+
+
+
+
+## Application
+
+
+
+
+
+
+
+
+## Reflection
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
